--- a/Eclipse/LeagueOfStalk/WebContent/CSS/LoSStyleSheet.css
+++ b/Eclipse/LeagueOfStalk/WebContent/CSS/LoSStyleSheet.css
@@ -46,6 +46,15 @@
 	position: fixed;
 	margin-top: 20%;
 }
+.summonerkompakt{
+	border-style: dotted;
+	border-color: rgba(255,255,255,1.00);
+	-webkit-box-sizing: inherit;
+	-moz-box-sizing: inherit;
+	box-sizing: inherit;
+	position: static;
+	padding-top: 40px;
+}
 .logo {
 	display: block;
 	margin: auto;
@@ -104,6 +113,7 @@
 	margin-left: 10%;
 	width: 20%;
 	float: left;
+	border-style: none;
 	
 }
 
@@ -121,10 +131,15 @@
 .achievements {
 	float: left;
 	color: rgba(255,255,255,1.00);
-	width: 20%;
+	width: 57%;
 	text-align: center;
 	font-family: RollandinEmilie;
 	font-weight: bold;
+	background-color: rgba(54,54,54,0.50);
+	-webkit-box-sizing: content-box;
+	-moz-box-sizing: content-box;
+	box-sizing: content-box;
+	padding-bottom: 32.2%;
 }
 .companyLogo {
 	float: left;
